--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "author": "Muhafiz Raza",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4",
     "uuid": "^10.0.0"
   }
